--- a/src/app/landingpage/about/about.component.html
+++ b/src/app/landingpage/about/about.component.html
@@ -1,61 +1,69 @@
-<div class="wrapper bg-secondary d-flex align-items-center justify-content-center">
-    <h1 class="display-4 fw-bold text-light">ABOUT US</h1>
+<div class="wrapper d-flex align-items-center justify-content-center mb-3 ">
+    <h1 class="display-4 fw-bold text-light bgp">ABOUT US</h1>
 </div>
 
 
-
-<div class="contentwrapper mt-5">
-    <div class=" mt-5 p-5 ">
+<div class="contentwrapper container h-100">
+    <div class="p-2">
         <div class="row ">
-        <div class="col-4 border pe-3">
-            <div class="aboutheading ">
-                <h1>IsDB-BISEW Hospital</h1>
-                <span class="lead">Your Faithful Helping Friends</span>
-            
-            </div>
-            <div class="content mt-3 border">
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus, at praesentium error inventore alias maiores et! At, Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos in fugit similique quibusdam quisquam, unde nesciunt quod sint placeat! Quis nobis, facere fuga cumque tempora reiciendis asperiores omnis neque, magni laudantium temporibus qui repudiandae est similique excepturi voluptatum molestiae! Nisi vel voluptatem doloremque quia, facilis animi illo suscipit quas necessitatibus ipsum eligendi vero explicabo fugiat, aspernatur blanditiis odit temporibus iusto laborum cumque? Corporis accusamus sit, repellendus quas totam veniam minima nemo quos asperiores nesciunt hic architecto id. Quo, soluta enim architecto ipsa repellendus assumenda? Vel, reiciendis aut quod molestiae vitae et velit voluptas ex voluptatibus quam dicta doloribus, voluptates quae.
-                </p>
+            <div class="col-10">
+                <div class="aboutheading justify-content-center">
+                    <h1 class=" text-center">IsDB-BISEW Hospital</h1>
+                    <p class="text-center lead">
+                        Your Faithful Helping Friends
+                    </p>
+
+                </div>
+
+                <div class="contentimage mb-4">
+                    <img src="https://www.isdb-bisew.org/files/shares/IsDB-Bisew-about-intro.png" alt=""
+                        class="img-fluid text-center myimg">
+                </div>
+
+
+                <div class="content mt-3 text-center">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus, at praesentium error inventore
+                        alias maiores et! At, Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos in fugit
+                        similique quibusdam quisquam, unde nesciunt quod sint placeat! Quis nobis, facere fuga cumque
+                        tempora reiciendis asperiores omnis neque, magni laudantium temporibus qui repudiandae est
+                        similique excepturi voluptatum molestiae! Nisi vel voluptatem doloremque quia, facilis animi
+                        illo suscipit quas necessitatibus ipsum eligendi vero explicabo fugiat, aspernatur blanditiis
+                        odit temporibus iusto laborum cumque? Corporis accusamus sit, repellendus quas totam veniam
+                        minima nemo quos asperiores nesciunt hic architecto id. Quo, soluta enim architecto ipsa
+                        repellendus assumenda? Vel, reiciendis aut quod molestiae vitae et velit voluptas ex
+                        voluptatibus quam dicta doloribus, voluptates quae.
+                    </p>
+                </div>
+
+
+
             </div>
 
-        </div>
-        <div class="col-6 ">
-          <div class="contentimage">
-            <img src="https://www.isdb-bisew.org/files/shares/IsDB-Bisew-about-intro.png" alt="" class="img-fluid myimg">
-          </div>
-            
-        </div>
 
-        <div class="col-2 d-flex justify-content-end">
-            
-            <div class="card">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-header">
-                      Featured
+            <div class="col-2">
+                <div class="d-flex justify-content-center">
+                    <div class="card ">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-header">
+                                Quick Links:
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="listcontro"><a href="" class="list-group-item lnk">Home</a></li>
+                                <li class="listcontro"><a href="" class="list-group-item lnk">Home</a></li>
+                                <li class="listcontro"><a href="" class="list-group-item lnk">Home</a></li>
+                                <li class="listcontro"><a href="" class="list-group-item lnk">Home</a></li>
+
+                            </ul>
+                        </div>
+
                     </div>
-                    <ul class="list-group list-group-flush">
-                        <li ><a href="" class="list-group-item lnk">Home</a></li>
-                        <li><a href="" class="list-group-item lnk">Home</a></li>
-                        <li><a href="" class="list-group-item lnk">Home</a></li>
-                        <li><a href="" class="list-group-item lnk">Home</a></li>
-                       
-                    </ul>
-                  </div>
-            <ul>
-                <li><a href="" class="list-group-item">Home</a></li>
-                <li><a href="" class="list-group-item">Home</a></li>
-                <li><a href="" class="list-group-item">Home</a></li>
-                <li><a href="" class="list-group-item">Home</a></li>
-                <li><a href="" class="list-group-item">Home</a></li>
-      
-   
-            </ul>
+                </div>
+
+
+            </div>
+
+
+
         </div>
-
     </div>
-
-    
-
-</div>
-</div>
