--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,43 +1,72 @@
-<!-- This snippet uses Font Awesome 5 Free as a dependency. You can download it at fontawesome.io! -->
+<div class="container p-5 m-5">
+  <div class="row d-flex justify-content-center align-items-center h-100">
+    <div class="col-md-9 col-lg-6 col-xl-5">
+      <img src="../../assets/images/hospital.jpg" class="img-fluid" alt="Hospital image">
+    </div>
+    <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+      <form>
 
-      <div class="row">
-        <div class="col-lg-10 col-xl-9 mx-auto">
-          <div class="card card-signin flex-row my-5">
-            <div class="card-img-left d-none d-md-flex">
-               <!-- Background image for card set in CSS! -->
-            </div>
-            <div class="card-body">
-              <h5 class="card-title text-center">Register</h5>
-              <form class="form-signin">
-                <div class="form-label-group">
-                  <input type="text" id="inputUserame" class="form-control" placeholder="Username" required autofocus>
-                  <label for="inputUserame">Username</label>
-                </div>
-  
-                <div class="form-label-group">
-                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
-                  <label for="inputEmail">Email address</label>
-                </div>
-                
-                <hr>
-  
-                <div class="form-label-group">
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                  <label for="inputPassword">Password</label>
-                </div>
-                
-                <div class="form-label-group">
-                  <input type="password" id="inputConfirmPassword" class="form-control" placeholder="Password" required>
-                  <label for="inputConfirmPassword">Confirm password</label>
-                </div>
-  
-                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Register</button>
-                <a class="d-block text-center mt-2 small" href="#">Sign In</a>
-                <hr class="my-4">
-                <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign up with Google</button>
-                <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Sign up with Facebook</button>
-              </form>
-            </div>
-          </div>
+        <div class="form-group mb-5">
+          <label for="uname">Select Role:</label>
+          <select class="form-select" formControlName="appointment_type">
+            <option value="1">User</option>
+            <option value="2">Doctor</option>
+            <option value="3">Admin</option>
+          </select>
         </div>
-      </div>
+
+        <!-- <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+          <p class="lead fw-normal mb-0 me-3">Sign in with</p>
+          <button type="button" class="btn btn-primary btn-floating mx-1">
+            <i class="fab fa-facebook-f"></i>
+          </button>
+
+          <button type="button" class="btn btn-primary btn-floating mx-1">
+            <i class="fab fa-twitter"></i>
+          </button>
+
+          <button type="button" class="btn btn-primary btn-floating mx-1">
+            <i class="fab fa-linkedin-in"></i>
+          </button>
+        </div>
+
+        <div class="divider d-flex align-items-center my-4">
+          <p class="text-center fw-bold mx-3 mb-0">Or</p>
+        </div> -->
+
+        <!-- Email input -->
+        <div class="form-outline mb-4">
+          <input type="email" id="form3Example3" class="form-control form-control-lg"
+            placeholder="Enter a valid email address" />
+          <label class="form-label" for="form3Example3">Email address</label>
+        </div>
+
+        <!-- Password input -->
+        <div class="form-outline mb-3">
+          <input type="password" id="form3Example4" class="form-control form-control-lg" placeholder="Enter password" />
+          <label class="form-label" for="form3Example4">Password</label>
+        </div>
+
+        <div class="d-flex justify-content-between align-items-center">
+          <!-- Checkbox -->
+          <div class="form-check mb-0">
+            <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
+            <label class="form-check-label" for="form2Example3">
+              Remember me
+            </label>
+          </div>
+          <a href="#!" class="text-body">Forgot password?</a>
+        </div>
+
+        <div class="text-center text-lg-start mt-4 pt-2">
+          <button type="button" class="btn btn-primary btn-lg"
+            style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+          <p class="small fw-bold mt-2 pt-1 mb-0 lead">Don't have an account? <a routerLink="/signup"
+              class="link-danger">Register</a></p>
+        </div>
+
+      </form>
+    </div>
+  </div>
+
+</div>
