--- a/src/app/landingpage/contact/contact.component.html
+++ b/src/app/landingpage/contact/contact.component.html
@@ -1,60 +1,111 @@
-<p>contact page</p>
 
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<h2>THis is heading</h2>
-<!-- 
-<div class="container">
-      
-    <h1>Angular 8 Bootstrap Tabs Example - ItSolutionStuff.com</h1>
-      
-    <ngb-tabset [destroyOnHide]="false">
-      
-      <ngb-tab title="Basic Setting">
-        <ng-template ngbTabContent>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </ng-template>
-      </ngb-tab>
-       
-      <ngb-tab>
-        <ng-template ngbTabTitle>SMS Setting</ng-template>
-        <ng-template ngbTabContent>
-            <p>This is SMS Setting</p>
-        </ng-template>
-      </ngb-tab>
-       
-      <ngb-tab>
-        <ng-template ngbTabTitle>Email Setting</ng-template>
-        <ng-template ngbTabContent>
-            <p>This is Email Setting</p>
-        </ng-template>
-      </ngb-tab>
-       
-      <ngb-tab title="Disabled" [disabled]="true">
-        <ng-template ngbTabContent>
-          <p>This is Disabled</p>
-        </ng-template>
-      </ngb-tab>
-       
-    </ngb-tabset>
-    </div> -->
+<div class="wrapper d-flex align-items-center justify-content-center mb-3">
+  <h1 class="display-4 fw-bold text-light bgp">CONTACT US</h1>
+</div>
+
+
+
+<!--Section: Contact v.2-->
+<section class="mb-4 h-100">
+  <div class="container  ">
+
+
+
+  <div class="row">
+
+      <!--Grid column-->
+      <div class="col-md-9 mb-md-0 mb-5">
+
+  <!--Section heading-->
+  <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+  <!--Section description-->
+  <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
+      a matter of hours to help you.</p>
+
+
+          <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+
+              <!--Grid row-->
+              <div class="row mb-4">
+
+                  <!--Grid column-->
+                  <div class="col-md-6">
+
+                    
+                      <div class="md-form mb-0">
+                          <input type="text" id="name" name="name" class="form-control">
+                          <label for="name" class="">Your name</label>
+                      </div>
+                  </div>
+                  <!--Grid column-->
+
+                  <!--Grid column-->
+                  <div class="col-md-6">
+                      <div class="md-form mb-0">
+                          <input type="text" id="email" name="email" class="form-control">
+                          <label for="email" class="">Your email</label>
+                      </div>
+                  </div>
+                  <!--Grid column-->
+
+              </div>
+              <!--Grid row-->
+
+              <!--Grid row-->
+              <div class="row mb-4">
+                  <div class="col-md-12">
+                      <div class="md-form mb-0">
+                          <input type="text" id="subject" name="subject" class="form-control">
+                          <label for="subject" class="">Subject</label>
+                      </div>
+                  </div>
+              </div>
+              <!--Grid row-->
+
+              <!--Grid row-->
+              <div class="row mb-4">
+
+                  <!--Grid column-->
+                  <div class="col-md-12">
+
+                      <div class="md-form">
+                          <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                          <label for="message">Your message</label>
+                      </div>
+
+                  </div>
+              </div>
+              <!--Grid row-->
+
+          </form>
+
+          <div class="text-center text-md-left">
+              <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+          </div>
+          <div class="status"></div>
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-md-3 text-center mt-5">
+          <ul class="list-unstyled mb-0">
+              <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                  <p> IDB Bhaban (4th Floor) E/8-A, Rokeya Sharani E/8-A, Rokeya Sharani, Dhaka 1207</p>
+              </li>
+
+              <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                  <p>+8801836567009</p>
+              </li>
+
+              <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                  <p>contact@minhaj.com</p>
+              </li>
+          </ul>
+      </div>
+      <!--Grid column-->
+
+  </div>
+</div>
+</section>
+<!--Section: Contact v.2-->
+
