--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -5,34 +5,32 @@
     <div id="header-carousel" class="carousel slide carousel-fade " data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="w-100" src="../../assets/images/carousel-1.jpg" alt="Image">
+                <img class="w-100" src="../../assets/images/Doctors/doctor-with-co-workers-analyzing-x-ray.jpg" alt="Image">
                 <div class="carousel-caption">
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-lg-8">
-                                <p
-                                    class="d-inline-block border border-white rounded text-primary fw-semi-bold py-1 px-3 animated slideInDown">
+                                <p class="d-inline-block border border-white rounded fw-semi-bold py-1 px-3 animated slideInDown lead bgp text-white">
                                     Welcome to IsDB-BISEW Hospital</p>
-                                <h1 class="display-1 mb-4 animated slideInDown text-secondary">Come And Be Friends
+                                <h1 class="display-4 mb-4 fw-semi-bold animated slideInDown headlinecar text-capitalize">Partnerships for Health.
                                 </h1>
-                                <a href="" class="btn btn-primary py-3 px-5 animated slideInDown">Make Appointment</a>
+                                <a href="" class="btn py-3 px-5 animated slideInDown  btn-info text-light">Make Appointment</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="w-100" src="../../assets/images/carousel-2.jpg" alt="Image">
+                <img class="w-100" src="../../assets/images/Doctors/team-young-specialist-doctors-standing-corridor-hospital.jpg" alt="Image">
                 <div class="carousel-caption">
                     <div class="container">
                         <div class="row justify-content-start">
-                            <div class="col-lg-7">
-                                <p
-                                    class="d-inline-block border border-white rounded text-primary fw-semi-bold py-1 px-5 animated slideInDown">
+                            <div class="col-lg-8">
+                                <p class="d-inline-block border border-white rounded fw-semi-bold py-1 px-3 animated slideInDown lead bgp text-white">
                                     Welcome to IsDB-BISEW Hospital</p>
-                                <h1 class="display-1 mb-4 animated slideInDown text-secondary">True Financial Support
-                                    For You</h1>
-                                <a href="" class="btn btn-primary py-3 px-5 animated slideInDown">Explore More</a>
+                                <h1 class="display-4 mb-4 fw-semi-bold animated slideInDown headlinecar text-capitalize">Quality care close to home.
+                                </h1>
+                                <a href="" class="btn py-3 px-5 animated slideInDown  btn-info ">Make Appointment</a>
                             </div>
                         </div>
                     </div>
@@ -57,7 +55,7 @@
     <div class="container">
         <div class="row gx-0">
             <div class="col-lg-4 wow zoomIn" data-wow-delay="0.1s">
-                <div class="bg-primary d-flex flex-column p-5" style="height: 300px;">
+                <div class=" d-flex flex-column p-5 bgp" style="height: 300px;">
                     <h3 class="text-white mb-3">Opening Hours</h3>
                     <div class="d-flex justify-content-between text-white mb-3">
                         <h6 class="text-white mb-0">Mon - Fri</h6>
@@ -184,7 +182,7 @@
                         </div>
                         <div class="col-lg-5">
                             <div class="dept_thumb">
-                                <img src="../../assets/images/department.png" alt="">
+                                <img src="../../assets/images/department_man.png" alt="">
                             </div>
                         </div>
                     </div>
