--- a/src/app/landingpage/header/header.component.html
+++ b/src/app/landingpage/header/header.component.html
@@ -23,7 +23,7 @@
 
 <!-- Navbar Start -->
 <nav class="navbar fixed-top navbar-expand-lg shadow-sm py-3 py-lg-0 my-nav">
-    <a href="index.html" class="navbar-brand p-0">
+    <a routerLink="" class="navbar-brand p-0">
         <h1 class="m-0 bgpt"><i class="fa-solid fa-house-medical-flag"></i> IsDB-BISEW Hospital</h1>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
