--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -91,10 +91,10 @@
             </div>
             <div class="col-lg-4 wow zoomIn" data-wow-delay="0.6s">
                 <div class="bg-secondary d-flex flex-column p-5" style="height: 300px;">
-                    <h3 class="text-white mb-3">Make Appointment</h3>
+                    <h3 class="text-white mb-3">Make Appointment By Call</h3>
                     <p class="text-white">Ipsum erat ipsum dolor clita rebum no rebum dolores labore, ipsum magna at eos
                         et eos amet.</p>
-                    <h2 class="text-white mb-0">+012 345 6789</h2>
+                    <h2 class="text-white mb-0">+880-183-6567009</h2>
                 </div>
             </div>
         </div>
