--- a/src/app/landingpage/footer/footer.component.html
+++ b/src/app/landingpage/footer/footer.component.html
@@ -7,43 +7,35 @@
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Quick Links</h3>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                    <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                    <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our
-                        Services</a>
-                    <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest
-                        Blog</a>
-                    <a class="text-light" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                    <a class="text-light mb-2" routerLink=""><i class="bi bi-arrow-right me-2 bgpt"></i>Home</a>
+                    <a class="text-light mb-2" routerLink="/about"><i class="bi bi-arrow-right  me-2 bgpt"></i>About Us</a>
+                    <a class="text-light" routerLink="/contact"><i class="bi bi-arrow-right  me-2 bgpt"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Popular Links</h3>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                    <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                    <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our
-                        Services</a>
-                    <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest
-                        Blog</a>
-                    <a class="text-light" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                    <a class="text-light mb-2" routerLink=""><i class="bi bi-arrow-right me-2 bgpt"></i>Home</a>
+                    <a class="text-light mb-2" routerLink="/about"><i class="bi bi-arrow-right me-2 bgpt"></i>About Us</a>
+                    <a class="text-light" routerLink="/contact"><i class="bi bi-arrow-right me-2 bgpt"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@example.com</p>
-                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+012 345 67890</p>
+                <p class="mb-2"><i class="bi bi-geo-alt me-2 bgpt"></i>IDB Bhaban (4th Floor) E/8-A, Rokeya Sharani E/8-A, Rokeya Sharani, Dhaka 1207</p>
+                <p class="mb-2"><i class="bi bi-envelope-open me-2 bgpt"></i>info@minhaj.com</p>
+                <p class="mb-0"><i class="bi bi-telephone me-2 bgpt"></i>+8801836567009</p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
                 <div class="d-flex">
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="#"><i
+                    <a class="btn btn-lg btn-info btn-lg-square rounded me-2" href="#"><i
                             class="fab fa-twitter fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="#"><i
+                    <a class="btn btn-lg btn-info btn-lg-square rounded me-2" href="#"><i
                             class="fab fa-facebook-f fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="#"><i
+                    <a class="btn btn-lg btn-info btn-lg-square rounded me-2" href="#"><i
                             class="fab fa-linkedin-in fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded" href="#"><i
+                    <a class="btn btn-lg btn-info btn-lg-square rounded" href="#"><i
                             class="fab fa-instagram fw-normal"></i></a>
                 </div>
             </div>
@@ -54,7 +46,7 @@
     <div class="container">
         <div class="row g-0">
             <div class="col-md-6 text-center text-md-start">
-                <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">Your Site Name</a>. All Rights
+                <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">IsDB-BISEW</a>. All Rights
                     Reserved.</p>
             </div>
             <div class="col-md-6 text-center text-md-end">
