--- a/src/app/adminboard/doctor/department/department.component.html
+++ b/src/app/adminboard/doctor/department/department.component.html
@@ -9,56 +9,133 @@
 <div class="container">
   <div class="row">
     <div class="col-4">
-      <h3>Add a Department For Doctor</h3>
+      
+      <h3 class="text-center">Add a Department For Doctor</h3>
       <form [formGroup]="docDeptForm" class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
         method="POST">
         <div class="form-group">
           <label for="">Department Name</label>
+          <input class="form-control" type="text" formControlName="dept_name" required minlength="3">
+
+          <div class="text-danger" *ngIf="deptNameValue?.touched && userNameval?.invalid">
+            <div *ngIf="deptNameValue?.errors?.['required']">Fill The Field First</div>
+          </div>
+
+          <!-- <div class="alert alert-danger " *ngIf="userNameval?.touched && userNameval?.invalid">
+            <div *ngIf="userNameval?.errors?.['minLength']">please put 3</div>
+          </div> -->
+
+          <!-- <div class="alert alert-danger " *ngIf="docDeptForm.get('dept_name')?.touched && docDeptForm.get('dept_name')?.invalid">
+            <div *ngIf="docDeptForm.get('dept_name')?.errors.required"></div>
+          </div> -->
+
+
+          <!-- <div *ngIf="docDeptForm.get('dept_name')?.invalid && (docDeptForm.get('dept_name')?.dirty || docDeptForm.get('name')?.touched)">
+            <div *ngIf="docDeptForm.get('dept_name')?.errors">Name is required</div>
+          </div> -->
+          
+        </div><br>
+    <div class="form-group">
+      <label for="">Department Manager</label>
+      <input class="form-control" type="text" name="" id="" formControlName="dept_manager" required>
+
+      <div class="text-danger" *ngIf="docDeptForm.get('dept_manager')?.invalid && (docDeptForm.get('dept_manager')?.dirty || docDeptForm.get('dept_manager')?.touched)">
+        <div *ngIf="docDeptForm.get('dept_manager')?.errors?.['required']">Fill The Field First</div>
+      </div>
+      
+    </div>
+    <br>
+
+    <div class="d-flex justify-content-center"><button type="submit"
+        class="btn btn btn-outline-dark float-right d-flex justify-content-center" id="btnLogin"
+        (click)="createDept()">Create Department</button></div>
+
+    </form>
+  </div>
+  <div class="col-8 h-25">
+
+
+
+
+
+
+    <table id="table_id" class="display compact" style="width:100%">
+      <thead>
+        <tr>
+          <th>Department ID</th>
+          <th>Department Name</th>
+          <th>Department Manager</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let dept of deptList">
+          <td>{{dept.id}} </td>
+          <td>{{dept.dept_name}}</td>
+          <td>{{dept.dept_manager}}</td>
+          <td>
+            <button class="btn btn-outline-secondary me-2" (click)="openLg(content, dept.id)" >Edit</button>
+            <button class="btn btn-outline-danger" (click)="deleteDeptByID(dept.id)">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+
+
+  </div>
+</div>
+</div>
+
+
+
+
+
+
+
+<!-- ==============================Modal====================================================== -->
+
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+      <h4 class="modal-title text-center" id="modal-basic-title">Member's Login</h4>
+      <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+      <app-department></app-department>
+
+      <!-- <form class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
+        method="POST">
+
+        <div class="image">
+          <img src="https://w7.pngwing.com/pngs/831/88/png-transparent-user-profile-computer-icons-user-interface-mystique-miscellaneous-user-interface-design-smile-thumbnail.png" alt="" class="img-fluid" width="80">
+      </div>
+
+
+
+
+        <div class="form-group">
+          <label for="">Floor:</label>
           <input class="form-control" type="text" name="" id="" formControlName="dept_name">
         </div>
+
         <div class="form-group">
-          <label for="">Department Manager</label>
+          <label for="">Cabin Type:</label>
+          <input class="form-control" type="text" name="" id="" formControlName="dept_manager">
+        </div>
+
+        <div class="form-group">
+          <label for="">Cabin Fare:</label>
           <input class="form-control" type="text" name="" id="" formControlName="dept_manager">
         </div>
         <br><br>
 
         <div class="d-flex justify-content-center"><button type="submit"
             class="btn btn btn-outline-dark float-right d-flex justify-content-center" id="btnLogin"
-            (click)="createDept()">Create Department</button></div>
+            >Create Cabin</button></div>
 
-      </form>
-    </div>
-    <div class="col-8 h-25">
-
-
-
-
-
-
-      <table id="table_id" class="display compact" style="width:100%">
-        <thead>
-          <tr>
-            <th>Department ID</th>
-            <th>Department Name</th>
-            <th>Department Manager</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let dept of deptList">
-            <td>{{dept.id}} </td>
-            <td>{{dept.dept_name}}</td>
-            <td>{{dept.dept_manager}}</td>
-            <td>
-              <button class="btn btn-outline-secondary me-2">Edit</button>
-              <button class="btn btn-outline-danger">Delete</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-
-
-
-    </div>
+      </form> -->
   </div>
-</div>
+  <div class="modal-footer">
+      <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
+  </div>
+</ng-template>
