--- a/src/app/landingpage/header/header.component.html
+++ b/src/app/landingpage/header/header.component.html
@@ -22,7 +22,7 @@
 
 
 <!-- Navbar Start -->
-<nav class="navbar fixed-top navbar-expand-lg shadow-sm py-3 py-lg-0 my-nav">
+<nav class="navbar navbar-expand-lg shadow-sm py-3 py-lg-0 my-nav">
     <a routerLink="" class="navbar-brand p-0">
         <h1 class="m-0 bgpt"><i class="fa-solid fa-house-medical-flag"></i> IsDB-BISEW Hospital</h1>
     </a>
@@ -35,6 +35,7 @@
             <a routerLink="/about" class="nav-item nav-link bgph">About</a>
             <a routerLink="/contact" class="nav-item nav-link bgph">Contact</a>
             <a routerLink="/admin" class="nav-item nav-link bgph">Amin Panel</a>
+            <!-- <a class="nav-item nav-link bgph" (click)="adminPanel()">Amin Panel</a> -->
             <a routerLink="/login" class="nav-item nav-link bgph">Sign In</a>
             <a routerLink="/signup" class="nav-item nav-link bgph">Sign Up</a>
             <!-- <div class="nav-item dropdown">
