--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div>
-    <app-header></app-header>
+    <app-header *ngIf="!rhide"></app-header>
 </div>
 <div>
-    <router-outlet></router-outlet>
+    <router-outlet ></router-outlet>
 </div>
 <div>
-    <app-footer></app-footer>
+    <app-footer *ngIf="!rhide"></app-footer>
 </div>
