--- a/src/app/adminboard/doctor/department/department.component.html
+++ b/src/app/adminboard/doctor/department/department.component.html
@@ -1,6 +1,6 @@
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+    <li class="breadcrumb-item"><a routerLink="/admin">Dashboard</a></li>
     <li class="breadcrumb-item active" aria-current="page">Department</li>
   </ol>
 </nav>
@@ -10,7 +10,11 @@
   <div class="row">
     <div class="col-4">
 
-      <h3 class="text-center">Add a Department For Doctor</h3>
+      <div class="bg-secondary mb-4">
+        <h6 class="p-3 text-white">Add a Department For Doctor:</h6>
+      </div>
+      
+
       <form [formGroup]="docDeptForm" class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
         method="POST">
         <div class="form-group">
@@ -48,26 +52,79 @@
         <br>
 
         <div class="d-flex justify-content-center"><button type="submit"
-            class="btn btn btn-outline-dark float-right d-flex justify-content-center" id="btnLogin"
+            class="btn btn-outline-dark btn-sm float-right d-flex justify-content-center" id="btnLogin"
             (click)="createDept()">Create Department</button></div>
 
       </form>
     </div>
+
+
+
+
     <div class="col-8 h-25">
+      <div class="table_wrapper">
+
+        <mat-form-field>
+          <mat-label>Search Your Data Here</mat-label>
+          <input matInput (keyup)="applyFilter($event)">
+        </mat-form-field>
+        <!-- A General Input Field Workd Also -->
+        <!-- <input type="text"  (keyup)="applyFilter($event)"> -->
+
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="datasource" matSort class="table-stripped">
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+              <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="dept_name">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Deparment Name </th>
+              <td mat-cell *matCellDef="let row"> {{row.dept_name}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="dept_manager">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Department Manager </th>
+              <td mat-cell *matCellDef="let row"> {{row.dept_manager}} </td>
+            </ng-container>
+            <ng-container matColumnDef="action">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Department Manager </th>
+              <td mat-cell *matCellDef="let row"> <button class="btn btn-info me-1 btn-sm"
+                  (click)="EditDept(content, row)">Edit</button>|
+                <button class="btn btn-danger btn-sm ms-1" (click)="deleteDeptByID(row.id)">Delete</button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <!-- <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr> -->
+          </table>
+        </div>
+      </div>
+
+      <mat-paginator [pageSizeOptions]="[10, 20,30, 100]" showFirstLastButtons
+        aria-label="Select page of users"></mat-paginator>
 
 
 
 
 
 
-      <table id="table_id" class="display compact" cellspacing="0" width="100%">
-        <!-- <table> -->
-        <thead>
+
+
+      <!-- Bootstrap or jquery Table -->
+      <!-- <table id="table_id" class="display compact" cellspacing="0" width="100%"> -->
+      <!-- <table> -->
+      <!-- <thead>
           <tr>
-            <th >Department ID</th>
-            <th >Department Name</th>
-            <th >Department Manager</th>
-            <th >Actions</th>
+            <th>Department ID</th>
+            <th>Department Name</th>
+            <th>Department Manager</th>
+            <th>Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -81,7 +138,7 @@
             </td>
           </tr>
         </tbody>
-      </table>
+      </table> -->
 
 
 
@@ -95,16 +152,33 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- ==============================Modal====================================================== -->
 
 <ng-template #content let-c="close" let-d="dismiss">
   <div class="modal-header">
-    <h4 class="modal-title text-center" id="modal-basic-title">Member's Login</h4>
+    <h4 class="modal-title text-center" id="modal-basic-title">Edit Your Department</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
   </div>
   <div class="modal-body">
 
-    <h3 class="text-center">Edit Your Data</h3>
+    <h3 class="text-center">Update Department Information</h3>
     <form [formGroup]="docDeptForm" class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
       method="POST">
       <div class="form-group">
@@ -146,50 +220,10 @@
 
     </form>
 
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <app-department></app-department> -->
-    <!-- <form class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
-        method="POST">
-        <div class="image">
-          <img src="https://w7.pngwing.com/pngs/831/88/png-transparent-user-profile-computer-icons-user-interface-mystique-miscellaneous-user-interface-design-smile-thumbnail.png" alt="" class="img-fluid" width="80">
-      </div>
-
-        <div class="form-group">
-          <label for="">Floor:</label>
-          <input class="form-control" type="text" name="" id="" formControlName="dept_name">
-        </div>
-
-        <div class="form-group">
-          <label for="">Cabin Type:</label>
-          <input class="form-control" type="text" name="" id="" formControlName="dept_manager">
-        </div>
-
-        <div class="form-group">
-          <label for="">Cabin Fare:</label>
-          <input class="form-control" type="text" name="" id="" formControlName="dept_manager">
-        </div>
-        <br><br>
-
-        <div class="d-flex justify-content-center"><button type="submit"
-            class="btn btn btn-outline-dark float-right d-flex justify-content-center" id="btnLogin"
-            >Create Cabin</button></div>
-
-      </form> -->
   </div>
-  <div class="modal-footer">
+  <!-- <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
-  </div>
+  </div> -->
 </ng-template>
 
 <h1>{{closeResult}}</h1>
@@ -207,34 +241,27 @@
 
 <!-- <table class="mat-elevation-z8" mat-table [dataSource]="deptList"> -->
 
-  <!--- Note that these columns can be defined in any order.
+<!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
-  <!-- Position Column -->
-  <!-- <ng-container matColumnDef="dept_id">
+<!-- Position Column -->
+<!-- <ng-container matColumnDef="dept_id">
     <th mat-header-cell *matHeaderCellDef>Department ID </th>
     <td mat-cell *matCellDef="let deptList"> {{deptList.id}} </td>
   </ng-container> -->
 
-  <!-- Name Column -->
-  <!-- <ng-container matColumnDef="department_name">
+<!-- Name Column -->
+<!-- <ng-container matColumnDef="department_name">
     <th mat-header-cell *matHeaderCellDef> Department Name </th>
     <td mat-cell *matCellDef="let deptList"> {{deptList.dept_name}} </td>
   </ng-container> -->
 
-  <!-- Weight Column -->
-  <!-- <ng-container matColumnDef="department_name">
+<!-- Weight Column -->
+<!-- <ng-container matColumnDef="department_name">
     <th mat-header-cell *matHeaderCellDef> Department Manager </th>
     <td mat-cell *matCellDef="let deptList"> {{deptList.dept_manager}} </td>
   </ng-container> -->
 
-  <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+<!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let deptList; columns: displayedColumns;"></tr>
 </table> -->
-
-
-
-
-
-
-
