--- a/src/app/landingpage/header/header.component.css
+++ b/src/app/landingpage/header/header.component.css
@@ -68,19 +68,19 @@
 /* ========================custom css================================ */
 .navbar
 {
-  background-color: none;
+  background-color:rgba(255, 255, 255, 0.7) ;
   /* background-color: rgba(255,255,0, 0.3); */
 }
 
 .topnav{
-  background-color: none;
+  background-color: rgba(255, 255, 255) ;
   position: static;
   z-index: 30;
   width: 100%;
 }
 
 .my-nav {
-    position: fixed;
+    position: static;
     /* position: absolute; for trasperanet navbar */
      z-index: 20;
     width: 100%;
