"need working on other class"

--- a/src/app/adminboard/doctor/createdoctor/createdoctor.component.html
+++ b/src/app/adminboard/doctor/createdoctor/createdoctor.component.html
@@ -74,6 +74,11 @@
                 </div>
                 <div class="row">
                     <div class="form-group col">
+                        <label for="">Join Date:</label>
+                        <input class="form-control" type="date" name="" id="" formControlName="doc_join_date">
+                    </div>
+
+                    <div class="form-group col">
                         <label for="">Put Your Picture:</label>
                         <input class="form-control" type="file" name="" id="" formControlName="details">
                     </div>
