--- a/src/app/adminboard/doctor/createdoctor/createdoctor.component.html
+++ b/src/app/adminboard/doctor/createdoctor/createdoctor.component.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="form-group col">
                         <label for="">Charge:</label>
-                        <input class="form-control" type="text" name="" id="" formControlName="charge">
+                        <input class="form-control" type="text" name="" id="" formControlName="visit_charge">
                     </div>
 
                 </div>
@@ -90,7 +90,7 @@
 
                 <div class="d-flex justify-content-center"><button type="submit"
                         class="btn btn-success float-right d-flex justify-content-center" id="btnLogin"
-                        (click)="createDoc()">Create Doctor</button>
+                        (click)="create()">Create Doctor</button>
                 </div>
 
 
