--- a/src/app/adminboard/doctor/createdoctor/createdoctor.component.html
+++ b/src/app/adminboard/doctor/createdoctor/createdoctor.component.html
@@ -80,7 +80,7 @@
 
                     <div class="form-group col">
                         <label for="">Put Your Picture:</label>
-                        <input class="form-control" type="file" name="" id="" formControlName="details">
+                        <input class="form-control" type="file" formControlName="picture">
                     </div>
                 </div>
 
